// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package ranks;

option go_package = "gke-internal,googlesource.com/gke-storage/high-scale-checkpointing/lib/ranks";

// gRPC service for driver instances to communicate state to the controller.
service RanksService {
  rpc Update(UpdateRequest)
    returns (UpdateResponse) {}
}

enum Lifecycle {
  PENDING = 0;
  ASSIGNED = 1;
  COMPLETED = 2;
  SHUTDOWN = 3;
}

message UpdateRequest {
  Lifecycle state = 1;
  string node = 2;
  string pod_uid = 3;
  int32 rank = 4;
  string jobset = 5;
  string jobset_shape = 6;
}

message UpdateResponse {
  Lifecycle new_state = 1;
  int32 rank = 2;
  string controller_ip = 3;
  string jobset = 4;
  string jobset_shape = 5;
}